Bug 283236 - Window is closed even the mouse cursor moves outside the close button
Summary: Window is closed even the mouse cursor moves outside the close button
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: git master
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-03 11:10 UTC by lman
Modified: 2011-10-14 18:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lman 2011-10-03 11:10:02 UTC
Version:           4.7.1 (using KDE 4.7.1) 
OS:                Linux

When I press the close window button and then move the cursor outside the close button area while moused button is still not release and then release the mouse button the window is closed but it shouldn't.

Reproducible: Always

Steps to Reproduce:
- press the close window button, don't release the mouse button press
- move the cursor outside the close button area while mouse button is still pressed
- release mouse button

Actual Results:  
 selected window is closed

Expected Results:  
- selected window should remain open

I often use this "move outside the close button area" trick on other systems as a last resort to avoid closing not correct window (e.g. when I have several windows opened and by accident I tried to close the wrong one)
Comment 1 Martin Flöser 2011-10-03 11:19:15 UTC
works fine here. Which window decoration are you using?
Comment 2 lman 2011-10-03 21:18:30 UTC
OK, you are right it works ok on Oxygen decoration. The decoration which does not work is called "seven" from kde-look.org, I will report this bug there. You can close this bug report as not valid.
Comment 3 Thomas Lübking 2011-10-03 21:25:54 UTC
Looks like a dekorator decoration, i'll just assign Christoph.

--
You can btw. close (your own) bugs yourself as well.
Comment 4 Christoph Feck 2011-10-03 21:38:48 UTC
Thomas, deKorator bugs are tracked at the KDE bug tracker :)
Comment 5 lman 2011-10-03 21:44:37 UTC
But this not bug in deKorator but in Aurorae theme engine (I guess from the description of the decoration which I use). Here is the link to theme page http://opendesktop.org/content/show.php?content=120296
Comment 6 Christoph Feck 2011-10-03 21:54:38 UTC
I can confirm that the bug is indeed in the Aurorae decoration engine. I also verified if the bug is in deKorator (and it is not).
Comment 7 Martin Flöser 2011-10-14 18:44:39 UTC
Git commit d4b83c3b37d3671ce0707adce26a4c1483a5b406 by Martin Gräßlin.
Committed on 14/10/2011 at 20:41.
Pushed by graesslin into branch 'KDE/4.7'.

Don't react on mouse release events in Aurorae if mouse is outside button

HAPPY BIRTHDAY KDE. One bug fix as a present.

BUG: 283236
FIXED-IN: 4.7.3

M  +2    -3    kwin/clients/aurorae/src/lib/auroraebutton.cpp

http://commits.kde.org/kde-workspace/d4b83c3b37d3671ce0707adce26a4c1483a5b406
Comment 8 Martin Flöser 2011-10-14 18:45:17 UTC
Git commit 6b76836f13b34a3c286096a4f340b99c31bf4f3e by Martin Gräßlin.
Committed on 14/10/2011 at 20:41.
Pushed by graesslin into branch 'master'.

Don't react on mouse release events in Aurorae if mouse is outside button

HAPPY BIRTHDAY KDE. One bug fix as a present.

BUG: 283236
FIXED-IN: 4.7.3

M  +2    -3    kwin/clients/aurorae/src/lib/auroraebutton.cpp

http://commits.kde.org/kde-workspace/6b76836f13b34a3c286096a4f340b99c31bf4f3e